--- a/ClassiNews/frontend/dashboard.html
+++ b/ClassiNews/frontend/dashboard.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-brand">
             <span>📰</span> ClassiNews
@@ -26,6 +27,7 @@
     </nav>
 
     <div class="dashboard-container">
+        <!-- Page Header / Hero -->
         <div class="page-header">
             <div class="hero-content">
                 <h1 class="page-title">News Classifier</h1>
@@ -41,7 +43,8 @@
         </div>
 
         <!-- Welcome/About Card -->
-        <   <h2 class="welcome-title">🚀 Welcome to ClassiNews</h2>
+        <div class="welcome-card">
+            <h2 class="welcome-title">🚀 Welcome to ClassiNews</h2>
             <p class="welcome-text">
                 Your AI tool for instant news categorization.
             </p>
@@ -58,7 +61,8 @@
 
         <div class="dashboard-grid">
             <!-- Left Column: Classification Form -->
-            <   <div class="card-header">
+            <div class="card">
+                <div class="card-header">
                     <span class="card-icon">✨</span>
                     <h2 class="card-title">Classify New Article</h2>
                 </div>
@@ -76,6 +80,7 @@
 
             <!-- Right Column: Quick Actions & Info -->
             <div class="quick-actions">
+                <div class="card">
                     <div class="card-header">
                         <span class="card-icon">⚡</span>
                         <h2 class="card-title">Quick Actions</h2>
@@ -100,6 +105,7 @@
 
                 <!-- Categories Info Card -->
                 <div class="card">
+                    <div class="card-header">
                         <span class="card-icon">📂</span>
                         <h2 class="card-title">Category Breakdown</h2>
                     </div>
@@ -129,6 +135,7 @@
         <!-- Recent Articles Section -->
         <div class="section-header">
             <h2 class="section-title">📚 Recent Articles</h2>
+            <div class="filter-controls">
                 <div class="filter-group">
                     <label class="filter-label">🔍 Filter:</label>
                     <select id="category-filter" class="form-select" style="width: 220px;" onchange="filterArticles()">
@@ -161,6 +168,7 @@
     <!-- Success Modal -->
     <div id="success-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
+            <div class="modal-icon">🎉</div>
             <h2 class="modal-title">Article Classified Successfully!</h2>
 
             <div class="result-box">
@@ -185,7 +193,8 @@
     <div id="about-modal" class="modal-overlay" style="display: none;">
         <div class="modal-content">
             <div class="modal-icon">📰</div>
-     
+            <h2 class="modal-title">About ClassiNews</h2>
+
             <div style="text-align: left; padding: 1rem;">
                 <p style="margin-bottom: 1rem; line-height: 1.6;">
                     <strong>ClassiNews</strong> is an AI-powered news classification system that automatically
@@ -210,7 +219,8 @@
     <div id="error-section" style="display: none;">
         <div id="error-message">Error occurred</div>
     </div>
-script src="dashboard.js"></script>
+
+    <script src="dashboard.js"></script>
 </body>
 
 </html>
